# MLOps-docker-compose

./: .env  README.md  docker-compose.yml
data/: sample_products.parquet  test_products.parquet
feast/: Dockerfile  pyproject.toml
feast/feature_repo/: entities.py  example.py  feature_services.py  feature_store.yaml  feature_views.py  file_sources.py  sample_products_def.py
feast/feature_repo/data/: driver_stats.parquet  registry.db  sample_products.parquet  test_products.parquet
mlflow/: pyproject.toml
