[tool.poetry]
name = "feast-ui"
version = "0.1.0"
description = "Feast Web UI docker server"
authors = ["Fernando Freire Scattone <fernando.scattone@alumni.usp.br>"]

[tool.poetry.dependencies]
python = "^3.10"
feast = {extras = ["redis", "aws"], version = "^0.24.1"}
isort = "^5.10.1"
black = "^22.6.0"
autoflake = "^1.4"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[tool.isort]
profile="black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
