[tool.poetry]
name = "feast-server"
version = "0.1.0"
description = ""
authors = ["Fernando Freire Scattone <fernando.scattone@alumni.usp.br>"]

[tool.poetry.dependencies]
python = "^3.10"
feast = {extras = ["redis"], version = "^0.22.1"}
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
